# AgentOPS

./: .gitignore  Jenkinsfile  README.md  dab-config.json  dab-config.yml  databricks.yml  pyproject.toml  requirements.txt  setup.py
.claude/skills/: demo_scope_1.md
app-bundle/: databricks.yml
app-bundle/app/: agent_app.py  app.yaml  chat.html  config.yaml  install.sh  pyproject.toml  requirements-frozen.txt  requirements-mastercard.txt  requirements.in  requirements.txt  server.py
app-bundle/app/guardrails/: post_llm.py  pre_llm.py
docs/: agentops-setup.md  session-flow-both-enabled.mmd  session-flow-single-backend.mmd  session-memory-setup.md
docs/examples/: Serving Endpoint Query Examples.ipynb
fixtures/: ai_dev_kit_skills.json  golden_dataset.json
resources/: app-resource.yml  batch-inference-resource.yml  iterative-improvement-resource.yml  monitoring-resource.yml  pipeline-resource.yml  rag-pipeline-resource.yml  serving-resource.yml.reference
scripts/: export_docs_fixture.py  generate_frozen_deps.py  sync_app_wheels.sh
src/agent_deployment/app/: agent_app.py  app.yaml  config.yaml  requirements.txt  server.py
src/agent_development/agent/: config-inmemory.yaml  config-lakebase.yaml  config-uc-only.yaml  config.yaml
src/agent_development/agent_evaluation/: install_deps.py
src/framework/: agent_base.py  mlops_utils.py  team_config.py
src/framework/audit/: audit_logger.py
src/framework/evaluation/: evaluation_pipeline.py
src/framework/guardrails/: post_llm.py  pre_llm.py
src/framework/inference/: batch_runner.py
src/framework/monitoring/: trace_monitor.py
teams/: README.md
teams/_template/: config.yaml  target.yml
teams/data-governance/: config.yaml  target.yml
teams/example-hr/: target.yml
teams/platform-engineering/: config.yaml  target.yml
tests/integration/: test_lakebase_memory.py  test_serving_endpoint.py
tests/smoke/: test_endpoint_smoke.py
tests/unit/: conftest.py  test_chunking.py  test_post_llm_guardrails.py  test_pre_llm_guardrails.py  test_team_config.py
wheels/: databricks_ai_bridge-0.19.0-py3-none-any.whl  databricks_connect-16.1.7-py2.py3-none-any.whl  databricks_langchain-0.19.0-py3-none-any.whl  databricks_mcp-0.9.0-py3-none-any.whl  databricks_openai-0.15.0-py3-none-any.whl  databricks_sdk-0.105.0-py3-none-any.whl  databricks_vectorsearch-0.66-py3-none-any.whl  langchain_core-1.3.0-py3-none-any.whl  langgraph_checkpoint_postgres-3.0.5-py3-none-any.whl  langgraph_prebuilt-1.0.10-py3-none-any.whl  langsmith-0.7.33-py3-none-any.whl  openai_agents-0.14.4-py3-none-any.whl  opentelemetry_api-1.41.0-py3-none-any.whl  opentelemetry_proto-1.41.0-py3-none-any.whl  opentelemetry_sdk-1.41.0-py3-none-any.whl  opentelemetry_semantic_conventions-0.62b0-py3-none-any.whl  skops-0.14.0-py3-none-any.whl  types_requests-2.33.0.20260408-py3-none-any.whl  unitycatalog_ai-0.3.2-py3-none-any.whl  unitycatalog_client-0.4.0-py3-none-any.whl  unitycatalog_langchain-0.3.0-py3-none-any.whl  unitycatalog_openai-0.2.0-py3-none-any.whl
(+90 files in other folders)
