[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-framework"
version = "2.0.1"
description = "AgentOPS Framework — guardrails, evaluation, audit, monitoring"
requires-python = ">=3.10"
dependencies = [
    # Dependencies are pre-installed on Databricks ML runtime.
    # Listed here for documentation only — install_requires is empty
    # to avoid pip trying to download behind firewalls.
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["framework*"]
