[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-framework"
version = "2.0.2"
description = "AgentOPS Framework — guardrails, evaluation, audit, monitoring"
requires-python = ">=3.10"
dependencies = [
    # Core deps — pre-installed on Databricks ML runtime (DBR 15+).
    # Listed here for documentation only — install_requires is empty
    # to avoid pip trying to download on air-gapped clusters.
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

# Iterative improvement (MemAlign/GEPA judge alignment + prompt optimization)
# Install via: pip install agentops-framework[optimization]
# On Mastercard: pip install agentops-framework[optimization] \
#   --index-url https://artifacts.mastercard.int/ui/packages/pypi/simple \
#   --trusted-host artifacts.mastercard.int
optimization = [
    "mlflow[genai]>=3.4",
    "dspy>=2.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["framework*"]

[tool.pytest.ini_options]
# Only run unit tests by default — integration/smoke tests require a live
# Databricks endpoint and explicit credentials that may not be available in CI.
# To run integration tests: pytest -m integration --endpoint-name <name>
# To run smoke tests:       pytest -m smoke --endpoint-name <name>
testpaths = ["tests/unit"]
